--- a/assets/less/page-specific/miscellaneous-custom-styles.less
+++ b/assets/less/page-specific/miscellaneous-custom-styles.less
@@ -9,6 +9,10 @@ div.banners div.slide {
 	opacity: 0;
 }
 
+div.banners img {
+	display: block;
+}
+
 div.banners div.slide.first {
 	opacity: 1;
 }
@@ -65,6 +69,13 @@ a.user-link {
 	text-transform: uppercase;
 	text-decoration: none;
 }
+div.body-content input[type=radio]:hover + div.radio-checkbox-dummy, 
+div.body-content input[type=checkbox]:hover + div.radio-checkbox-dummy,
+div.body-content input[type=radio]:checked + div.radio-checkbox-dummy, 
+div.body-content input[type=checkbox]:checked + div.radio-checkbox-dummy {
+	border-color: #AF282E;
+}
+
 @media (max-width: 979px) {
 	a.user-link {
 		padding-top: 18px;
@@ -99,7 +110,7 @@ div.body-content textarea {
 	#main-content-strip {
 		margin-bottom: 36px;
 	}
-	
+
 	.navbar .navbar-inner .nav-collapse aside > ul.menu > li {
 		padding-top: 4px;
 		padding-bottom: 4px;
